@@ -9,6 +9,7 @@ import org.jbehave.core.reporters.Format;
 import org.jbehave.core.reporters.StoryReporterBuilder;
 import org.jbehave.core.steps.CandidateSteps;
 import org.jbehave.core.steps.InjectableStepsFactory;
+import org.jbehave.core.steps.InstanceStepsFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
@@ -16,12 +17,15 @@ import org.springframework.core.io.ClassPathResource;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
+
+import static org.jbehave.core.io.CodeLocations.codeLocationFromClass;
+import static org.jbehave.core.reporters.Format.CONSOLE;
 
 public class UserStory extends JUnitStories {
     private final ApplicationContext applicationContext;
 
-    @Value("classpath:stories/user_story.story") private org.springframework.core.io.Resource resource;
 
     public UserStory() {
         applicationContext = new AnnotationConfigApplicationContext(AppConfig.class);
@@ -32,44 +36,18 @@ public class UserStory extends JUnitStories {
         return new MostUsefulConfiguration()
                 .useStoryLoader(new LoadFromClasspath(this.getClass()))
                 .useStoryReporterBuilder(new StoryReporterBuilder()
-                        .withDefaultFormats()
-                        .withFormats(Format.CONSOLE, Format.TXT));
+                        .withCodeLocation(codeLocationFromClass(this.getClass()))
+                        .withFormats(CONSOLE));
     }
 
     @Override
     public InjectableStepsFactory stepsFactory() {
-        return new InjectableStepsFactory() {
-            @Override
-            public List<CandidateSteps> createCandidateSteps() {
-                return List.of();
-            }
-
-            @Override
-            public Object createInstanceOfType(Class<?> aClass) {
-                return null;
-            }
-        };
+        return new InstanceStepsFactory(configuration(), new UserStepsTest());
     }
 
     @Override
-    protected List<String> storyPaths(){
-        try {
-            resource.getFile().toPath();
-            System.out.println(resource.getFile().toPath());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        ClassPathResource resource = new ClassPathResource("stories/user_story.story");
-        Path path = null;
-        try {
-            path = Paths.get(resource.getURI());
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-//        String content = new String(Files.readAllBytes(path));
-//        return List.of(content.split("\\r?\\n"));
-        return List.of();
-
+    protected List<String> storyPaths() {
+        return Arrays.asList("user_story.story");
     }
 
 }
